--- a/src/pages/dahua.astro
+++ b/src/pages/dahua.astro
@@ -1,39 +1,70 @@
 ---
-// Importing necessary components
 import MainLayout from "@/layouts/MainLayout.astro";
-import { SITE } from "@data/constants";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 
-
-const pageTitle: string = `dahua | ${SITE.Title + " - " + "Custom Fabrication & Surveillance Solution Provider In Dubai, United Arab Emirates"}`;
-
-
-
-
-// Define TypeScript interface for props
 interface Props {
   title: string;
   subTitle?: string;
+  description?: string;
   benefits?: Array<string>;
 }
 
-const abtitle: string = "dahua";
-const absubTitle: string ="Discover Lovosis, Dubai's authorized supplier of top-quality Surveillance & IT Solution."
+const title: string = "Buy Dahua CCTV Cameras in Bulk | Wholesale Distribution Services";
+const description: string = "Looking for the best deals on Dahua cameras? We are a trusted wholesale distributor of Dahua CCTV cameras, offering advanced security solutions at unbeatable prices. Explore our bulk pricing options for commercial, residential, and industrial needs. Contact us for a quote today!"
 const structuredData={
-    "@context": "https://schema.org",
-    "@type": "WebPage",
-    "@id": "https://lovosis.com/dahua",
-    "url": "https://lovosis.com/dahua",
-    "name": "dahua | Lovosis",
-    "description": "Discover Lovosis, Dubai's authorized supplier of top-quality Surveillance & IT Solution. Learn about our commitment to excellence in the UAE construction industry.",
-    "isPartOf": {
-      "@type": "WebSite",
-      "url": "https://lovosis.com",
-      "name": "Lovosis",
-      "description": "Custom Fabrication & Surveillance Solution Provider In Dubai, United Arab Emirates."
+  
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "name": "Lovosis Technology L.L.C",
+  "url": "https://www.lovosis.com",
+  "logo": "https://lovosis.com/logo.png",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+971 50 9162488",
+    "contactType": "Sales",
+    "areaServed": "AE",
+    "availableLanguage": "English"
+  },
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Satellite Market Naif Deira,Baghlaf Building Showroom No.5",
+    "addressLocality": "Dubai",
+    "addressRegion": "United Arab Emirates",
+    "postalCode": "123421",
+    "addressCountry": "AE"
+  },
+  "sameAs": [
+    "https://www.instagram.com/_lovosis_group_of_companies_/",
+    "https://in.linkedin.com/company/lovosis-technology-llc"
+  ],
+  "brand": {
+    "@type": "Brand",
+    "name": "Dahua",
+    "url": "https://www.dahuasecurity.com/",
+    "logo": "https://lovosis.com/pictures/Brand%20Logo/dahua.png"
+  },
+  "product": {
+    "@type": "Product",
+    "name": "Dahua CCTV Camera",
+    "image": "https://lovosis.com/pictures/dahua.png",
+    "description": {description},
+    "brand": {
+      "@type": "Brand",
+      "name": "Dahua"
     },
-    "inLanguage": "en-US"
+    "offers": {
+      "@type": "Offer",
+      "url": "https://lovosis.com/dahua",
+      "priceCurrency": "AED",
+      "price": "150",
+      "eligibleRegion": {
+        "@type": "Place",
+        "name": "UAE"
+      },
+      "priceValidUntil": "2024-12-31"
+    }
   }
+}
 ---
 
 <style>
@@ -119,7 +150,7 @@ const structuredData={
 
 
 <MainLayout
-  title={pageTitle} sd={structuredData}
+  title={title} sd={structuredData} description={description}
  
 >
 
