--- a/src/pages/surveillance.astro
+++ b/src/pages/surveillance.astro
@@ -1,15 +1,10 @@
 ---
-// Importing necessary components
+
 import MainLayout from "@/layouts/MainLayout.astro";
 import { SITE } from "@data/constants";
 
-
 const pageTitle: string = `Surveillance Solution In Dubai | ${SITE.Title + " - " + "Custom Fabrication & Surveillance Solution Provider In Dubai, United Arab Emirates"}`;
 
-
-
-
-// Define TypeScript interface for props
 interface Props {
   title: string;
   subTitle?: string;
@@ -134,7 +129,7 @@ const structuredData={
               Enhance the safety of residential areas with our high-definition cameras and smart monitoring systems. Keep an eye on entrances, playgrounds, and communal areas to ensure a secure living environment.</p>
           </div>
           <figure class="overflow-hidden">
-            <img src="/pictures/logo.png" alt="Image description" class="w-full h-full object-cover" />
+            <img src="/pictures/residense.jpg" alt="Image description" class="w-full h-full object-cover" />
           </figure>
         </div>
       </li>
@@ -145,7 +140,7 @@ const structuredData={
             <p class="text-base font-light leading-normal dark:text-neutral-300">Protect your business assets with Lovosis’ advanced surveillance solutions. Monitor office spaces, parking lots, and critical areas to prevent unauthorized access and theft.</p>
           </div>
           <figure class="overflow-hidden">
-            <img src="/pictures/logo.png" alt="Image description" class="w-full h-full object-cover" />
+            <img src="/pictures/building.jpg" alt="Image description" class="w-full h-full object-cover" />
           </figure>
         </div>
       </li>
@@ -156,7 +151,7 @@ const structuredData={
             <p class="text-base font-light leading-normal dark:text-neutral-300">Ensure the safety of public spaces such as parks, malls, and transportation hubs. Our solutions provide comprehensive coverage and real-time monitoring to manage large crowds effectively.</p>
           </div>
           <figure class="overflow-hidden">
-            <img src="/pictures/logo.png" alt="Image description" class="w-full h-full object-cover" />
+            <img src="/pictures/publicspace.jpg" alt="Image description" class="w-full h-full object-cover" />
           </figure>
         </div>
       </li>
@@ -167,7 +162,7 @@ const structuredData={
             <p class="text-base font-light leading-normal dark:text-neutral-300">Safeguard essential infrastructure like power plants, water facilities, and telecommunication networks. Lovosis provides robust surveillance systems to monitor and protect critical assets from potential threats.</p>
           </div>
           <figure class="overflow-hidden">
-            <img src="/pictures/logo.png" alt="Image description" class="w-full h-full object-cover" />
+            <img src="/pictures/factory.jpg" alt="Image description" class="w-full h-full object-cover" />
           </figure>
         </div>
       </li>
