--- a/src/pages/surveillance.astro
+++ b/src/pages/surveillance.astro
@@ -124,9 +124,9 @@ const structuredData={
       <li class="card sticky top-32 pt-4 bg-white dark:bg-neutral-600 rounded-lg shadow-xl cursor-pointer transition-all duration-300" id="card_1">
         <div class="card__content grid grid-cols-1 md:grid-cols-2 gap-1 p-5 rounded-lg text-left relative">
           <div>
-            <h2 class="text-4xl font-light dark:text-neutral-200">Residential Communities</h2>
-            <p class="text-base font-light leading-normal dark:text-neutral-300">
-              Enhance the safety of residential areas with our high-definition cameras and smart monitoring systems. Keep an eye on entrances, playgrounds, and communal areas to ensure a secure living environment.</p>
+            <h2 class="text-4xl font-light dark:text-neutral-200">Revolutionizing Security with Lovosis Surveillance Solutions</h2>
+            <p class="text-base font-light leading-normal dark:text-neutral-300 mt-10">
+              At Lovosis, we redefine security through cutting-edge surveillance technology designed to adapt to diverse industries. From commercial spaces to residential areas, our systems provide unparalleled reliability, ensuring a safer environment for everyone.</p>
           </div>
           <figure class="overflow-hidden">
             <img src="/pictures/residense.jpg" alt="Image description" class="w-full h-full object-cover" />
@@ -136,8 +136,8 @@ const structuredData={
       <li class="card sticky top-32 pt-4 bg-white dark:bg-neutral-600 rounded-lg shadow-xl cursor-pointer transition-all duration-300" id="card_1">
         <div class="card__content grid grid-cols-1 md:grid-cols-2 gap-1 p-5 rounded-lg text-left relative">
           <div>
-            <h2 class="text-4xl font-light dark:text-neutral-200">Commercial Buildings</h2>
-            <p class="text-base font-light leading-normal dark:text-neutral-300">Protect your business assets with Lovosis’ advanced surveillance solutions. Monitor office spaces, parking lots, and critical areas to prevent unauthorized access and theft.</p>
+            <h2 class="text-4xl font-light dark:text-neutral-200">Your Partner in IT and Custom Fabrication Excellence</h2>
+            <p class="text-base font-light leading-normal dark:text-neutral-300 mt-10">Lovosis combines innovative IT solutions with expert custom fabrication to deliver tailored systems that meet your unique requirements. Our team ensures every project aligns with the highest industry standards for performance and efficiency.</p>
           </div>
           <figure class="overflow-hidden">
             <img src="/pictures/building.jpg" alt="Image description" class="w-full h-full object-cover" />
@@ -147,8 +147,8 @@ const structuredData={
       <li class="card sticky top-32 pt-4 bg-white dark:bg-neutral-600 rounded-lg shadow-xl cursor-pointer transition-all duration-300" id="card_1">
         <div class="card__content grid grid-cols-1 md:grid-cols-2 p-5 rounded-lg text-left relative">
           <div>
-            <h2 class="text-4xl font-light dark:text-neutral-200">Public Spaces</h2>
-            <p class="text-base font-light leading-normal dark:text-neutral-300">Ensure the safety of public spaces such as parks, malls, and transportation hubs. Our solutions provide comprehensive coverage and real-time monitoring to manage large crowds effectively.</p>
+            <h2 class="text-4xl font-light dark:text-neutral-200">Dubai's Trusted Name in Advanced Fastening Technology</h2>
+            <p class="text-base font-light leading-normal dark:text-neutral-300 mt-10">Time is valuable, and Lovosis understands that. Our advanced fastening solutions accelerate assembly processes, ensuring installations are completed twice as fast without compromising quality or precision.</p>
           </div>
           <figure class="overflow-hidden">
             <img src="/pictures/publicspace.jpg" alt="Image description" class="w-full h-full object-cover" />
@@ -158,8 +158,8 @@ const structuredData={
       <li class="card sticky top-32 pt-4 bg-white dark:bg-neutral-600 rounded-lg shadow-xl cursor-pointer transition-all duration-300" id="card_1">
         <div class="card__content grid grid-cols-1 md:grid-cols-2 p-5 rounded-lg text-left relative">
           <div>
-            <h2 class="text-4xl font-light dark:text-neutral-200">Critical Infrastructure</h2>
-            <p class="text-base font-light leading-normal dark:text-neutral-300">Safeguard essential infrastructure like power plants, water facilities, and telecommunication networks. Lovosis provides robust surveillance systems to monitor and protect critical assets from potential threats.</p>
+            <h2 class="text-4xl font-light dark:text-neutral-200">Empowering Businesses with Precision and Innovation</h2>
+            <p class="text-base font-light leading-normal dark:text-neutral-300 mt-10">With over 7k satisfied customers, Lovosis is committed to empowering businesses by enhancing their digital landscape. Our integrated surveillance and IT solutions provide unmatched security and technological efficiency.</p>
           </div>
           <figure class="overflow-hidden">
             <img src="/pictures/factory.jpg" alt="Image description" class="w-full h-full object-cover" />
