--- a/src/components/sections/FooterSection.astro
+++ b/src/components/sections/FooterSection.astro
@@ -36,9 +36,6 @@ const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
           <a href="/" class="hover:text-gray-400">Home</a>
         </p>
         <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="/product" class="hover:text-gray-400">Product</a>
-        </p>
-        <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
           <a href="/about" class="hover:text-gray-400">About</a>
         </p>
         <p class="mt-2 text-sm text-neutral-600 dark:text-neutral-400">
@@ -63,25 +60,25 @@ const strings = Astro.currentLocale === "fr" ? frStrings : enStrings;
           Brands
         </h3>
         <p class="mt-3 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="hikvision" class="hover:text-gray-400">Hikvision</a>
+          <a href="/hikvision" class="hover:text-gray-400">Hikvision</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="dahua" class="hover:text-gray-400">Dahua</a>
+          <a href="/dahua" class="hover:text-gray-400">Dahua</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="ewind" class="hover:text-gray-400">Ewind</a>
+          <a href="/ewind" class="hover:text-gray-400">Ewind</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="westerdigital" class="hover:text-gray-400">Western Digital</a>
+          <a href="/westerdigital" class="hover:text-gray-400">Western Digital</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="toshiba" class="hover:text-gray-400">Toshiba</a>
+          <a href="/toshiba" class="hover:text-gray-400">Toshiba</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="unv" class="hover:text-gray-400">UNV</a>
+          <a href="/unv" class="hover:text-gray-400">UNV</a>
         </p>
         <p class="mt-1 text-sm text-neutral-600 dark:text-neutral-400">
-          <a href="imou" class="hover:text-gray-400">IMOU</a>
+          <a href="/imou" class="hover:text-gray-400">IMOU</a>
         </p>
       </div>
       <div class="col-span-1 md:col-span-2">
