--- a/src/components/ui/starlight/SiteTitle.astro
+++ b/src/components/ui/starlight/SiteTitle.astro
@@ -1,6 +1,6 @@
 ---
-import mainLogo from "@images/starlight/screwfast_logo_dark.svg?raw";
-import docsLogo from "@images/starlight/docs_logo.svg?raw";
+import mainLogo from "@images/starlight/logo.png?raw";
+import docsLogo from "@images/starlight/logo.png?raw";
 import type { Props } from "@astrojs/starlight/props";
 
 
