--- a/src/pages/dahua-diamond-partner-agreement-2025.astro
+++ b/src/pages/dahua-diamond-partner-agreement-2025.astro
@@ -200,7 +200,7 @@ const structuredData = {
                 </p>
                 <div class="video-container mt-8">
                     <iframe
-                        src="https://www.youtube.com/embed/MeB5Xgx8YNA?si=Qi4WuwGoDpBFUBqC"
+                        src="https://www.youtube.com/embed/GHkHbL-r-wQ"
                         title="Dahua Diamond Partner Agreement 2025"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen
