--- a/src/components/ui/starlight/Head.astro
+++ b/src/components/ui/starlight/Head.astro
@@ -1,21 +1,15 @@
 ---
 import StarlightHead from "@astrojs/starlight/components/Head.astro";
-import {
-  default as VtbotStarlight,
-   
-} from "astro-vtbot/components/starlight/Base.astro";
-import Props from 'astro-vtbot/components/starlight/Base.astro';
-
-// https://docs.astro.build/en/guides/view-transitions/#fallback-control
+import { default as VtbotStarlight } from "astro-vtbot/components/starlight/Base.astro";
+import Props from "astro-vtbot/components/starlight/Base.astro";
 Astro.props.viewTransitionsFallback = "animate";
 ---
 
-<!-- <VtbotStarlight {...Astro.props}>
+<VtbotStarlight {...Astro.props}>
   <StarlightHead {...Astro.props} />
-</VtbotStarlight> -->
+</VtbotStarlight>
 
 <style is:global>
-  /* Slow down Chrome's default animation */
   ::view-transition-group(root) {
     animation-duration: 250ms;
   }
