--- a/src/components/ui/starlight/SiteTitle.astro
+++ b/src/components/ui/starlight/SiteTitle.astro
@@ -2,16 +2,15 @@
 import mainLogo from "@images/starlight/screwfast_hero.svg?raw";
 import docsLogo from "@images/starlight/screwfast_hero.svg?raw";
 
-
 const main = "/";
 const locale = Astro.props.locale ? Astro.props.locale + "/" : "";
 const docs = "/" + locale + "welcome-to-docs/";
 ---
 
-<!-- <span class="site-title flex">
+<span class="site-title flex">
   <a class="main-logo" href={main} set:html={mainLogo} aria-label="Lovosis" />
   <a class="docs-logo" href={docs} set:html={docsLogo} aria-label="Lovosis" />
-</span> -->
+</span>
 
 <style>
   .site-title {
@@ -21,7 +20,7 @@ const docs = "/" + locale + "welcome-to-docs/";
   .site-title a {
     display: flex;
   }
-  
+
   .flex {
     display: flex;
     align-items: center;
@@ -30,7 +29,7 @@ const docs = "/" + locale + "welcome-to-docs/";
     outline: 0;
   }
   .site-title a:focus-visible > :global(*) {
-    transform: translateY(calc(.1rem * -1));
+    transform: translateY(calc(0.1rem * -1));
     transition: transform 250ms cubic-bezier(0.33, 1, 0.68, 1);
   }
 
@@ -39,7 +38,7 @@ const docs = "/" + locale + "welcome-to-docs/";
     height: auto;
   }
   .site-title a:hover :global(svg) {
-    transform: translateY(calc(.1rem * -1));
+    transform: translateY(calc(0.1rem * -1));
     transition: transform 250ms cubic-bezier(0.33, 1, 0.68, 1);
   }
 </style>
