--- a/src/pages/hikvision.astro
+++ b/src/pages/hikvision.astro
@@ -1,16 +1,15 @@
 ---
 import MainLayout from "@/layouts/MainLayout.astro";
-import { SITE } from "@data/constants";
 import PrimaryCTA from "@components/ui/buttons/PrimaryCTA.astro";
 
-const pageTitle: string = `hikvision | ${SITE.Title + " - " + "Wholesale Hikvision Cameras Distributor | Best Prices for Security Solutions"}`;
+const pageTitle: string = "Hikvision wholesale dealer in U.A.E";
 interface Props {
   title: string;
   descriptions?: string;
   benefits?: Array<string>;
 }
 const descriptions: string =
-  "Looking for the best deals on Hikvision cameras? We are a trusted wholesale distributor of Hikvision CCTV cameras, offering top-quality security solutions at unbeatable prices. Explore our wide range of bulk pricing options for residential, commercial, and industrial needs. Contact us for quotes today";
+  "Hikvision wholesale dealer in UAE offering top-quality CCTV cameras, access control, and security solutions at unbeatable prices. Contact us for bulk pricing";
 const structuredData = {
   "@context": "https://schema.org",
   "@type": "Organization",
